--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 spacy==2.1.0
-argpase==1.1
+argparse==1.1
 async-generator==1.10
 backports.functools-lru-cache==1.6.1
 bert-tensorflow==1.0.1
@@ -9,6 +9,7 @@ certifi==2020.6.20
 cffi==1.11.5
 decorator==4.4.2
 defusedxml==0.6.0
+Flask==1.0.2
 google-pasta==0.2.0
 gpt-2-simple==0.7.1
 ipython-genutils==0.2.0
@@ -20,7 +21,7 @@ Keras-Preprocessing==1.1.0
 mkl-fft==1.2.0
 mkl-random==1.1.1
 mkl-service==2.3.0
-neuracoref==4.0
+neuralcoref==4.0
 nltk==3.5
 numpy==1.19.4
 pandas==1.1.3
@@ -30,6 +31,7 @@ ptyprocess==0.6.0
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 pytz==2020.1
 pyzmq==19.0.2
 regex==2020.10.28
