--- a/requirements.txt
+++ b/requirements.txt
@@ -18,9 +18,6 @@ joblib==0.17.0
 jupyterlab==2.2.9
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
-mkl-fft==1.2.0
-mkl-random==1.1.1
-mkl-service==2.3.0
 neuralcoref==4.0
 nltk==3.5
 numpy==1.19.4
@@ -39,7 +36,9 @@ scikit-learn==0.23.2
 Send2Trash==1.5.0
 sklearn==0.0
 tensorboard==1.14.0
+tensorflow==1.14.0
 tensorflow-estimator==1.14.0
+tensorflow-hub==0.9.0
 termcolor==1.1.0
 testpath==0.4.4
 threadpoolctl==2.1.0
